# FlockingCPP

./: .gitignore  CMakeLists.txt  FlockingCPP.sln  README.md
FlockingCPP/: Boid.cpp  Boid.h  FlockingCPP.vcxproj  FlockingCPP.vcxproj.filters  FlockingRule.cpp  FlockingRule.h  ImGuiExtra.cpp  ImGuiExtra.h  Particle.cpp  Particle.h  SFMLApp.cpp  SFMLApp.h  Utils.cpp  Utils.hpp  Vector2Utilities.cpp  Vector2Utilities.hpp  Vector2fExt.cpp  Vector2fExt.h  World.cpp  imgui.ini  main.cpp
FlockingCPP/Imgui-SFML/: imgui_widgets.cpp
extlibs/imgui/: CMakeLists.txt
extlibs/imgui/include/imgui/: imconfig.h
include/: Boid.h  FlockingRule.h  ImGuiExtra.h  Particle.h  SFMLApp.h  Utils.hpp  World.h  imgui_demo.hpp
src/: Boid.cpp  FlockingRule.cpp  ImGuiExtra.cpp  Particle.cpp  SFMLApp.cpp  Utils.cpp  World.cpp
